# UKBinCollectionData

./: .dockerignore  .env  .gitignore  BromleyBoroughCouncil.py  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  ISSUE_RESOLUTION_PROGRESS.md  LICENSE  Makefile  Pipfile  README.md  behave.ini  bin_to_ics.py  conftest.py  hacs.json  integration_test_results.md  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: dev.Dockerfile  devcontainer.json  docker-compose.yml
.github/: commitizen-requirements.txt  dependabot.yaml
.github/ISSUE_TEMPLATE/: COUNCIL_ISSUE.yaml  COUNCIL_REQUEST.yaml  HOME_ASSISTANT_CUSTOM_COMPONENT_ISSUE.yaml
.github/workflows/: behave.yml  behave_pull_request.yml  behave_schedule.yml  bump.yml  codeql-analysis.yml  docker-image.yml  ha_compatibility_test.yml  hacs_validation.yml  hassfest_validate.yml  lint.yml  release.yml  rollback-release.yml  tag-on-merge.yml  validate-release-ready.yml  wiki.yml
3.11/: index.html
3.11/2250/: index.html
3.11/2254/: index.html
3.11/2256/: index.html
3.11/2261/: index.html
3.11/2263/: index.html
3.11/2265/: index.html
3.11/2267/: index.html
3.11/2269/: index.html
3.11/2271/: index.html
3.11/2272/: index.html
3.11/2273/: index.html
3.11/2276/: index.html
3.11/2278/: index.html
3.11/2279/: index.html
3.11/2280/: index.html
3.11/2281/: index.html
3.11/2283/: index.html
3.11/2286/: index.html
3.11/2287/: index.html
3.11/2288/: index.html
3.11/2289/: index.html
3.11/2295/: index.html
3.11/2297/: index.html
3.12/: index.html
3.12/2250/: index.html
3.12/2254/: index.html
3.12/2256/: index.html
3.12/2261/: index.html
3.12/2263/: index.html
3.12/2265/: index.html
3.12/2267/: index.html
3.12/2269/: index.html
3.12/2271/: index.html
3.12/2272/: index.html
3.12/2273/: index.html
3.12/2276/: index.html
3.12/2278/: index.html
3.12/2279/: index.html
3.12/2280/: index.html
3.12/2281/: index.html
3.12/2283/: index.html
3.12/2286/: index.html
3.12/2287/: index.html
3.12/2288/: index.html
3.12/2289/: index.html
3.12/2295/: index.html
3.12/2297/: index.html
3.12/partial/: index.html
custom_components/uk_bin_collection/: README.md  __init__.py  calendar.py  config_flow.py  const.py  docker-compose.yml  initialisation.py  input.json  manifest.json  options_flow.py  property_info.py  sensor.py  services.yaml  strings.json  utils.py
docs/: RELEASE-SETUP-SUMMARY.md  deploy-key-setup.md  example_council.md  github-app-setup.md  github-app-troubleshooting.md  index.md  manual-tag-fix.md  release-quick-reference.md  release-workflow-diagram.md  release-workflow-fixes.md  release-workflow-migration.md  release-workflow-setup-checklist.md  release-workflow.md  rollback-release.md  south-kesteven-ha-hardening-candidate.md  utilities.md  workflow-improvements-summary.md  workflow-naming-conventions.md
outputs/: BromleyBoroughCouncil.json  CharnwoodBoroughCouncil.json  ChelmsfordCityCouncil.json  CheshireEastCouncil.json  HuntingdonDistrictCouncil.json  NewcastleCityCouncil.json  NorthKestevenDistrictCouncil.json  NorthSomersetCouncil.json  SheffieldCityCouncil.json  StockportBoroughCouncil.json  WakefieldCityCouncil.json
scripts/: BromleyBoroughCouncil.py  ChelmsfordCityCouncil.py  CheshireEastCouncil.py  DurhamCountyCouncil.py  NorthKestevenDistrictCouncil.py  NorthSomersetCouncil.py  SheffieldCityCouncil.py  WakefieldCityCouncil.py  bromley_borough_council.py  charnwood_borough_council.py  check_ha_compatibility.py  cheshire_east_council.py  collect_data.py  durham_county_council.py  get_bin_data.py  pin_release_manifest.py  run.py  sheffield_city_council.py  validate_release_contract.py  wakefield_city_council.py  warwick_district_council.py
scripts/councils/: BlackburnCouncil.py  CardiffCouncil.py  CheshireEastCouncil.py  CrawleyBoroughCouncil.py  EastDevonDC.py  HuntingdonDistrictCouncil.py  LeedsCityCouncil.py  NELincs.py  NewcastleCityCouncil.py  StHelensBC.py  StockportBoroughCouncil.py  TorridgeDistrictCouncil.py  WakefieldCityCouncil.py  WarwickDistrictCouncil.py  WiganBoroughCouncil.py  councilclasstemplate.py
tests/: __init__.py  input.json  test_pin_release_manifest.py  test_release_workflow_order.py  test_validate_release_contract.py  test_workflow_actions_pinned.py
tests/disposable_ha/: Compatibility.Containerfile  Containerfile  FixtureCouncil.py  ImportGate.Containerfile  LIVE_CANARY.md  (+22 more)
uk_bin_collection/: .coverage  Local_Authority_Boundaries.geojson  compare_lad_codes.py  map.html
uk_bin_collection_api_server/: Dockerfile  docker-compose.yml  requirements.txt  server.py  swagger.yaml
wiki/: Councils.md  Home.md  Setup.md  generate_wiki.py
(+7556 files in other folders)
