[tool.poetry]
name = "uk_bin_collection"
version = "0.41.5"
description = "Python Lib to collect UK Bin Data"
readme = "README.md"
authors = ["Robert Bradley <robbrad182@gmail.com>"]
packages = [
    { include = "uk_bin_collection", from = "." },
]
include = ["uk_bin_collection"]

[tool.pytest.ini_options]
pythonpath = [
    ".", "uk_bin_collection"
]

[tool.flit.metadata]
module = "uk_bin_collection"

[tool.poetry.urls]
issues = "https://github.com/robbrad/UKBinCollectionData/issues"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
flake8 = "*"
jsonschema = "*"
pylint = "*"
pytest = "*"
setuptools = "*"
pytest-bdd = "*"
allure-pytest-bdd = "*"
pytest-xdist = {extras = ["psutil"], version = "*"}
pyhamcrest = "*"


[tool.poetry.scripts]
uk_bin_collection = "uk_bin_collection.uk_bin_collection:collect_data"

[tool.dephell.main]
versioning = "semver"
from = {format = "poetrylock", path = "poetry.lock"}
envs = ["main"]
to = {format = "poetry", path = "pyproject.toml"}

[tool.poetry.dependencies]
bs4 = "*"
python-dateutil = "*"
holidays = "*"
pandas = "*"
python = ">=3.10"
requests = "*"
selenium = "*"
lxml = "*"
urllib3 = "*"
webdriver-manager = "^4.0.1"

[tool.commitizen]
major_version_zero = true
version_provider = "poetry"
version_scheme = "semver"
version_files = [
    "custom_components/uk_bin_collection/manifest.json:version",
    "custom_components/uk_bin_collection/manifest.json:requirements",
    "custom_components/uk_bin_collection/config_flow.py:githubusercontent"
]

